--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -50,4 +50,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: bloben/tasks:${{ steps.tag_version.outputs.VERSION }}
+          tags: bloben/tasks:${{ steps.tag_version.outputs.VERSION }}, bloben/tasks:latest
